# syndicate

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DartConfiguration.tcl  README.md  convert_audio_raw_to_wav.py  supported_sensors.md  vcpkg_rf.txt
PostSyndicate/: setup.py
PostSyndicate/PostSyndicate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PostSyndicate/camera/: face_cropping.py  test_thermal.ipynb  utils.py
PostSyndicate/camera/thermal_data/: cap_6.tiff
PostSyndicate/fmcwradar/: cm_radar_testing.ipynb  fmcw_data_processor.py  format_packets_script.py  packet_organizer.py
PostSyndicate/mx800/: extract_data.py  interpolate_data.py  mx800_config.py
PostSyndicate/radar/: cm_radar_testing.ipynb  packet_organizer.py
PostSyndicate/thermal/: cap_0.tiff  cap_1.tiff  cap_2.tiff  cap_3.tiff  cap_4.tiff  cap_5.tiff  cap_6.tiff  cap_7.tiff  cap_8.tiff  cap_9.tiff  test_boson.py  test_boson_interactive.ipynb
Spintest/: CMakeLists.txt
Syndicate/: CMakeLists.txt  camera.cpp  camera.h  sensor.cpp  sensor.h  sensorStack.cpp  sensorStack.h
Syndicate/BosonThermal/: AssemblyInfo.cpp  CMakeLists.txt  IR16FrameEventAdapter.h  ManagedIR16Filters.cpp  ManagedIR16Filters.h  Stdafx.h  ir16dump.cpp  ir16dump.h  ir16filter.h  ir16pin.h  ir16preview.h  streams.h
Syndicate/BosonThermal/ManagedIR16Filters/: IR16FrameEventAdapter.cpp  ManagedIR16Filters.vcxproj  ManagedIR16Filters.vcxproj.filters  ReadMe.txt  Stdafx.cpp  Stdafx.h  app.aps  graphHelpers.cpp  graphHelpers.h  ir16filter.cpp  ir16pin.cpp  ir16preview.cpp  ir16queuePin.cpp  ir16queuePin.h
Syndicate/HardwareTrigger/: CMakeLists.txt  HardwareTrigger.cpp  HardwareTrigger.h
Syndicate/MX800/: CMakeLists.txt  MX800.cpp  MX800.h
Syndicate/MiniDSPMic/: CMakeLists.txt  MiniDSPMic.cpp  MiniDSPMic.h
Syndicate/OpenCVCamera/: CMakeLists.txt  OpenCVCamera.cpp  OpenCVCamera.h
Syndicate/RFEthernet/: CMakeLists.txt  RFEthernet.cpp  RFEthernet.h
Syndicate/RFEthernet/RadarConfigs/: awr1443_config.lua  awr1443_config_4rx_1tx.lua  awr1443_config_4rx_3tx.lua
Syndicate/RealSenseCamera/: CMakeLists.txt  RealSenseCamera.cpp  RealSenseCamera.h
Syndicate/RespBelt/: CMakeLists.txt  RespBelt.cpp  RespBelt.h
Syndicate/SerialPort/: CMakeLists.txt  SerialPort.cpp  SerialPort.h
Syndicate/SimpleSensor/: CMakeLists.txt  simpleSensor.cpp  simpleSensor.h
Syndicate/SpinnakerCamera/: CMakeLists.txt  SpinnakerCamera.cpp  SpinnakerCamera.h  SpinnakerInfo.cpp
Syndicate/SpinnakerHelp/: CMakeLists.txt  SpinnakerInfo.h
Syndicate/VimbaCamera/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  CameraObserver.cpp  CameraObserver.h  ErrorCodeToMessage.h  FrameObserver.h  TransformImage.h  VimbaCamera.cpp  VimbaCamera.h
Syndicate/zedCam/: CMakeLists.txt  zedCam.cpp  zedCam.h
VitalDetection/SpO2/: calibrate_ratio_parameters.ipynb
cmake/: FindNpcap.cmake  FindSpinVideo.cmake  FindSpinnaker.cmake  FindVimba.cmake  FindVimbaC.cmake  FindVimbaCPP.cmake  FindVimbaImageTransform.cmake
config/: CLI_LogFile.txt  awr1443_config.lua  awr1443_config_4rx_1tx.lua  awr1443_config_4rx_3tx.lua  awr1443_config_4rx_3tx_edited.lua  awr1443_config_4rx_3tx_prev_1.lua  capture_awr1443_config_4rx_3tx.lua  close_mmwavestudio.cmd  reset_ar_device.cmd  reset_fpga.cmd  run_3_trials_of_2_hours.cmd  run_mmwavestudio.cmd  run_multi_4rx1tx_mmwavestudio.cmd  run_multi_4rx3tx_mmwavestudio MMHEALTH PC.cmd  run_multi_4rx3tx_mmwavestudio.cmd  test_awr1443_config_4rx_3tx.lua  test_multi_4rx3tx_mmwavestudio.cmd
config/VSCaptureMP-master-copy/VSCaptureMP/: VSCaptureMP.7z  VSCaptureMP.sln
config/VSCaptureMP-master-copy/VSCaptureMP/VSCaptureMP/: Class1.cs  Class3.cs  Program.cs  VSCaptureMP.csproj
docs/source/: conf.py  index.rst  installation.rst
include/: audio.h  camera.h  rf.h  sensor.h  thermal.h
scripts/: acq.cpp  awr1443_osa.lua  awr1443_osa_trig.lua  capture_sensor_config.xml  convert_audio_raw_to_wav.py  debug_settings.xml  debug_settings_out.xml  dshow_test.cpp  eye_config.xml  format_packets.ipynb  main.cpp  main_config.cpp  nir_test.xml  osa_config.xml  packets_acq.cpp  pcapreader.py  radar_thermal.xml  rf_sensor_config.xml  sensor_config.xml  sensor_config_all.xml  sensor_config_bp.xml  sensor_config_radar.xml  sensor_config_radarSynth.xml  sensor_config_radar_zed2.xml  sensor_config_spo2.xml  sensor_config_spo2_rgb.xml  sensor_config_spo2_rgb_fluorescent.xml  sensor_config_spo2_rgb_tungsten.xml  sensor_config_test_resp_belt.xml  sensor_config_testresp.xml  sensor_config_zed2.xml  sr300_test.ipynb  test_camera.ipynb  test_config.cpp  test_mx800.xml  test_sensor_config.xml  test_thermal.py  thermal_radar_resp_belt.xml  trig_test.xml  trig_test_no_thermal.xml  (+1 more)
scripts/old/: convert_audio_raw_to_wav.py  pcapreader.py  sr300_test.ipynb
scripts/rf_sockets/: rf_acq.cpp  rf_receive.cpp  test_socket.py
src/: CMakeLists.txt  SpinnakerCamera.cpp  SpinnakerCamera.h  audio.cpp  camera.cpp  main.cpp  myIndent.cpp  myIndent.h  nir2.cpp  rf.cpp  thermal.cpp  thermal.h  thermal_v2.cpp  vimba_simple_streaming.cpp  vimba_streaming.cpp
src/Vimba_helper/: ApiController.cpp  ApiController.h  FrameObserver.cpp  main.cpp
src/continuous/: nir_continuous.cpp  polarized_continuous.cpp  rgb_continuous.cpp
src/preset/: nir.cpp  polarized.cpp  rgb.cpp
src/prev/: nir_continuous_prev.cpp  nir_prev.cpp
